--- a/new_file_local.html
+++ b/new_file_local.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>add new file from repo while remote has alternative version</h1>
+    <h1>add new file from repo while remote has alternative versioni 999</h1>
+    <h1>add new file from repo while remote has alternative versioni 999</h1>
   </body>
 </html>
