--- a/homework1.html
+++ b/homework1.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Test Git push edit after commit 1 after create branch dev</h1>
+    <h1>Test Git oipush edit after commit 1 after create branch dev</h1>
   </body>
 </html>
